--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit requests pyyaml
+          pip install pre-commit requests pyyaml pytest
       - name: Run pre-commit
         run: pre-commit run --all-files
-      - name: Run link checker
-        run: python scripts/link_check.py
+      - name: Run unit tests
+        run: pytest -q
 
 
