--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ theme:
 nav:
   - Home: index.md
   - Catalog: 'Comprehensive Catalog of LLM Jailbreaking and Attack Techniques.md'
+  - Attack–Defence Matrix: attack-defense-matrix.md
   - Categories:
       - Agentic: agentic/index.md
       - Training Alignment: training-alignment/reinforcement-learning-alignment-attacks.md
