--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit requests pyyaml pytest
+          pip install pre-commit requests pyyaml pytest fastapi uvicorn strawberry-graphql
       - name: Run pre-commit
         run: pre-commit run --all-files
       - name: Run unit tests
