--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,29 +2,30 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
+    branches: [master]
   schedule:
     - cron: '0 0 * * 0'
 
 jobs:
-  lint:
+  lint-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit requests pyyaml pytest
-      - name: Run pre-commit
-        run: pre-commit run --all-files
-      - name: Run unit tests
-        run: pytest -q
-
-
+          pip install .[dev]
+      - name: Black check
+        run: black --check .
+      - name: Type check
+        run: mypy --strict .
+      - name: Run tests
+        run: pytest -q --cov=.
+      - name: Post coverage comment
+        uses: MishaKav/pytest-coverage-comment@v1
+        if: github.event_name == 'pull_request'
