--- a/secure_llmattacks_v3/pyproject.toml
+++ b/secure_llmattacks_v3/pyproject.toml
@@ -1,7 +1,8 @@
 [project]
-name = "secure_llmattacks_v3"
+name = "secure-llmattacks-v3"
 version = "0.1.0"
-description = "Secure LLM Attacks v3"
+description = "Research workspace for secure LLM attack detection"
+authors = [{name = "LLM Security"}]
 readme = "README.md"
 requires-python = ">=3.11"
 
