--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,29 +2,30 @@ name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-  schedule:
-    - cron: '0 0 * * 0'
 
 jobs:
-  lint:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '18'
+          python-version: '3.11'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pre-commit requests pyyaml pytest
-      - name: Run pre-commit
-        run: pre-commit run --all-files
-      - name: Run unit tests
-        run: pytest -q
-
-
+          pip install -r requirements.txt
+          pip install black mypy pytest pytest-cov
+      - name: Black check
+        run: black --check .
+      - name: Run tests
+        run: |
+          FAST_LINK_CHECK=10 pytest -q --cov=. --cov-report=xml
+      - name: Mypy
+        run: mypy --strict .
+      - name: Post coverage comment
+        uses: MishaKav/pytest-coverage-comment@v1
+        with:
+          pytest-xml-coverage-path: ./coverage.xml
