--- a/secure_llmattacks_v3/pyproject.toml
+++ b/secure_llmattacks_v3/pyproject.toml
@@ -1,11 +1,16 @@
 [project]
 name = "secure-llmattacks-v3"
 version = "0.1.0"
-description = "Research workspace for secure LLM attack detection"
-authors = [{name = "LLM Security"}]
+description = ""
+authors = [
+    {name = "Codex",email = "codex@openai.com"}
+]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = "^3.11"
+dependencies = [
+]
+
 
 [build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
