--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,12 @@ authors = [ {name="LLM Attacks Team"} ]
 readme = "README.md"
 license = {file = "LICENSE"}
 requires-python = ">=3.8"
+dependencies = [
+    "requests",
+    "markdownify",
+    "pdfminer.six",
+    "PyYAML",
+]
 
 [tool.black]
 line-length = 88
