--- a/secure_llmattacks_v3/pyproject.toml
+++ b/secure_llmattacks_v3/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "secure-llmattacks-v3"
-version = "0.1.0"
+version = "3.0.0-alpha"
 description = ""
 authors = [
     {name = "Codex",email = "codex@openai.com"}
@@ -12,5 +12,5 @@ dependencies = [
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=42", "wheel"]
+build-backend = "setuptools.build_meta"
