--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install black mypy pytest pytest-cov
+      - name: Validate dataset schema
+        run: python scripts/build_dataset.py --check-only
       - name: Black check
         run: black --check .
       - name: Run tests
